[gd_scene load_steps=9 format=2]

[ext_resource path="res://Labyrinth.tscn" type="PackedScene" id=1]
[ext_resource path="res://SplitScreen/Map.gd" type="Script" id=2]
[ext_resource path="res://SplitScreen/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://fonts/blockbusta.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxLine" id=1]
thickness = 0
vertical = true

[sub_resource type="StyleBoxLine" id=2]
grow_begin = 0.0
grow_end = 0.0
thickness = 0

[sub_resource type="StyleBoxLine" id=3]
thickness = 6
vertical = true

[sub_resource type="StyleBoxLine" id=4]
thickness = 6

[node name="Map" type="Node"]
script = ExtResource( 2 )

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelTop" type="Panel" parent="Container"]
margin_right = 1920.0
margin_bottom = 74.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Container/PanelTop"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Container/PanelTop/HBoxContainer"]
margin_right = 637.0
margin_bottom = 74.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1ItemContainer" type="HBoxContainer" parent="Container/PanelTop/HBoxContainer/HBoxContainer2"]
margin_right = 637.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="lblTimeGlobal" type="Label" parent="Container/PanelTop/HBoxContainer"]
margin_left = 641.0
margin_top = 11.0
margin_right = 1278.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "0:34"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Container/PanelTop/HBoxContainer"]
margin_left = 1282.0
margin_right = 1920.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player3ItemContainer" type="HBoxContainer" parent="Container/PanelTop/HBoxContainer/HBoxContainer"]
margin_left = 638.0
margin_right = 638.0
margin_bottom = 74.0

[node name="ViewportContainer" type="VBoxContainer" parent="Container"]
margin_top = 74.0
margin_right = 1920.0
margin_bottom = 1005.0
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainerTop" type="HBoxContainer" parent="Container/ViewportContainer"]
margin_right = 1920.0
margin_bottom = 463.0
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsPanelContainer1" type="PanelContainer" parent="Container/ViewportContainer/HBoxContainerTop"]
visible = false
margin_right = 1916.0
margin_bottom = 463.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Container/ViewportContainer/HBoxContainerTop/ControlsPanelContainer1"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1909.0
margin_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="PlayerLabel" type="Label" parent="Container/ViewportContainer/HBoxContainerTop/ControlsPanelContainer1"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1909.0
margin_bottom = 58.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.662745, 0.564706, 1 )
text = "Player 1"
align = 1
valign = 1

[node name="lblInput" type="Label" parent="Container/ViewportContainer/HBoxContainerTop/ControlsPanelContainer1"]
margin_left = 762.0
margin_top = 179.0
margin_right = 1153.0
margin_bottom = 284.0
size_flags_horizontal = 4
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.662745, 0.564706, 1 )
text = "MOVEMENT: W A S D
ACTION: space"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer1" type="ViewportContainer" parent="Container/ViewportContainer/HBoxContainerTop"]
visible = false
margin_left = 642.0
margin_right = 1281.0
margin_bottom = 464.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="Container/ViewportContainer/HBoxContainerTop/ViewportContainer1"]
size = Vector2( 958, 464 )
handle_input_locally = false
render_target_update_mode = 0

[node name="Camera2D" type="Camera2D" parent="Container/ViewportContainer/HBoxContainerTop/ViewportContainer1/Viewport1"]
current = true
zoom = Vector2( 0.1, 0.1 )
smoothing_enabled = true
script = ExtResource( 3 )

[node name="World" parent="Container/ViewportContainer/HBoxContainerTop/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]

[node name="VSeparator" type="VSeparator" parent="Container/ViewportContainer/HBoxContainerTop"]
margin_left = 958.0
margin_right = 962.0
margin_bottom = 463.0
custom_styles/separator = SubResource( 3 )

[node name="ViewportContainer3" type="ViewportContainer" parent="Container/ViewportContainer/HBoxContainerTop"]
visible = false
margin_left = 642.0
margin_right = 1281.0
margin_bottom = 463.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport3" type="Viewport" parent="Container/ViewportContainer/HBoxContainerTop/ViewportContainer3"]
size = Vector2( 639, 463 )
handle_input_locally = false
render_target_update_mode = 0

[node name="Camera2D" type="Camera2D" parent="Container/ViewportContainer/HBoxContainerTop/ViewportContainer3/Viewport3"]
current = true
zoom = Vector2( 0.1, 0.1 )
smoothing_enabled = true
script = ExtResource( 3 )

[node name="ControlsPanelContainer3" type="PanelContainer" parent="Container/ViewportContainer/HBoxContainerTop"]
visible = false
margin_left = 4.0
margin_right = 1920.0
margin_bottom = 463.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Container/ViewportContainer/HBoxContainerTop/ControlsPanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1909.0
margin_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="PlayerLabel" type="Label" parent="Container/ViewportContainer/HBoxContainerTop/ControlsPanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1909.0
margin_bottom = 58.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.662745, 0.564706, 1 )
text = "Player 2"
align = 1
valign = 1

[node name="lblInput" type="Label" parent="Container/ViewportContainer/HBoxContainerTop/ControlsPanelContainer3"]
margin_left = 762.0
margin_top = 179.0
margin_right = 1153.0
margin_bottom = 284.0
size_flags_horizontal = 4
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.662745, 0.564706, 1 )
text = "MOVEMENT: W A S D
ACTION: space"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Container/ViewportContainer"]
margin_top = 463.0
margin_right = 1920.0
margin_bottom = 467.0
custom_styles/separator = SubResource( 4 )

[node name="HBoxContainerBottom" type="HBoxContainer" parent="Container/ViewportContainer"]
margin_top = 467.0
margin_right = 1920.0
margin_bottom = 931.0
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="ViewportContainer4" type="ViewportContainer" parent="Container/ViewportContainer/HBoxContainerBottom"]
visible = false
margin_right = 638.0
margin_bottom = 464.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport4" type="Viewport" parent="Container/ViewportContainer/HBoxContainerBottom/ViewportContainer4"]
size = Vector2( 958, 464 )
handle_input_locally = false
render_target_update_mode = 0

[node name="Camera2D" type="Camera2D" parent="Container/ViewportContainer/HBoxContainerBottom/ViewportContainer4/Viewport4"]
current = true
zoom = Vector2( 0.1, 0.1 )
smoothing_enabled = true
script = ExtResource( 3 )

[node name="ControlsPanelContainer4" type="PanelContainer" parent="Container/ViewportContainer/HBoxContainerBottom"]
visible = false
margin_right = 958.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Container/ViewportContainer/HBoxContainerBottom/ControlsPanelContainer4"]
margin_left = 7.0
margin_top = 7.0
margin_right = 951.0
margin_bottom = 457.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="PlayerLabel" type="Label" parent="Container/ViewportContainer/HBoxContainerBottom/ControlsPanelContainer4"]
margin_left = 7.0
margin_top = 7.0
margin_right = 951.0
margin_bottom = 58.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.662745, 0.564706, 1 )
text = "Player 3"
align = 1
valign = 1

[node name="lblInput" type="Label" parent="Container/ViewportContainer/HBoxContainerBottom/ControlsPanelContainer4"]
margin_left = 283.0
margin_top = 179.0
margin_right = 674.0
margin_bottom = 284.0
size_flags_horizontal = 4
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.662745, 0.564706, 1 )
text = "MOVEMENT: W A S D
ACTION: space"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="Container/ViewportContainer/HBoxContainerBottom"]
margin_left = 958.0
margin_right = 962.0
margin_bottom = 464.0
custom_styles/separator = SubResource( 3 )

[node name="ViewportContainer2" type="ViewportContainer" parent="Container/ViewportContainer/HBoxContainerBottom"]
visible = false
margin_left = 642.0
margin_right = 1281.0
margin_bottom = 464.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="Container/ViewportContainer/HBoxContainerBottom/ViewportContainer2"]
size = Vector2( 958, 464 )
handle_input_locally = false
render_target_update_mode = 0

[node name="Camera2D" type="Camera2D" parent="Container/ViewportContainer/HBoxContainerBottom/ViewportContainer2/Viewport2"]
current = true
zoom = Vector2( 0.1, 0.1 )
smoothing_enabled = true
script = ExtResource( 3 )

[node name="ControlsPanelContainer2" type="PanelContainer" parent="Container/ViewportContainer/HBoxContainerBottom"]
visible = false
margin_left = 4.0
margin_right = 1920.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Container/ViewportContainer/HBoxContainerBottom/ControlsPanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1909.0
margin_bottom = 457.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="PlayerLabel" type="Label" parent="Container/ViewportContainer/HBoxContainerBottom/ControlsPanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1909.0
margin_bottom = 58.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.662745, 0.564706, 1 )
text = "Player 4"
align = 1
valign = 1

[node name="lblInput" type="Label" parent="Container/ViewportContainer/HBoxContainerBottom/ControlsPanelContainer2"]
margin_left = 762.0
margin_top = 179.0
margin_right = 1153.0
margin_bottom = 284.0
size_flags_horizontal = 4
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.662745, 0.564706, 1 )
text = "MOVEMENT: W A S D
ACTION: space"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBottom" type="Panel" parent="Container"]
margin_top = 1005.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Container/PanelBottom"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Container/PanelBottom/HBoxContainer"]
margin_right = 637.0
margin_bottom = 75.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player4ItemContainer" type="HBoxContainer" parent="Container/PanelBottom/HBoxContainer/HBoxContainer2"]
margin_bottom = 75.0

[node name="lblTimeGlobal" type="Label" parent="Container/PanelBottom/HBoxContainer"]
margin_left = 641.0
margin_top = 12.0
margin_right = 1278.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "0:34"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Container/PanelBottom/HBoxContainer"]
margin_left = 1282.0
margin_right = 1920.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2ItemContainer" type="HBoxContainer" parent="Container/PanelBottom/HBoxContainer/HBoxContainer"]
margin_left = 638.0
margin_right = 638.0
margin_bottom = 75.0

[node name="ShowControlsTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ShowScoresTimer" type="Timer" parent="."]
one_shot = true

[connection signal="roundOver" from="." to="Container/ViewportContainer/HBoxContainerTop/ViewportContainer1/Viewport1/World" method="_on_Map_roundOver"]
[connection signal="timeout" from="ShowControlsTimer" to="." method="_on_ShowControlsTimer_timeout"]
[connection signal="timeout" from="ShowScoresTimer" to="." method="_on_ShowScoresTimer_timeout"]
